tests/bad/enum_method_with_same_name.oc
/// fail: Enum variant with name `Integer` already exists

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def Variable::Integer() {}
